// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer should handle START_FETCHING action 1`] = `
Immutable.Map {
  "isFetching": true,
}
`;

exports[`ui reducer should handle STOP_FETCHING action 1`] = `
Immutable.Map {
  "isFetching": false,
}
`;

exports[`ui reducer should return initial state by default 1`] = `
Immutable.Map {
  "isFetching": false,
}
`;
